<resources>
    <string name="app_name">Etanol ou Gasolina</string>
    <string name="texto_opcional">*Opcional. Caso não sejam digitas será usada a média de 70%</string>
    <string name="hint_etanol">Digite o preço do etanol (ex: 2.37)</string>
    <string name="hint_gasolina">Digite o preço da gasolia (ex: 4.37)</string>
    <string name="hint_media_etnol">Digite a média com etanol. Ex: 6.5</string>
    <string name="hint_media_gasolina">Digite a média com gasolina. Ex: 8.5</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpar">Limpar</string>
    <string name="txtetanol">Etanol</string>
    <string name="valorgasolina">Valor da gasolina</string>
    <string name="valoretanol">Valor do etanol</string>
    <string name="preenchacampoetanol">Por favor, preencha o valor do etanol</string>
    <string name="preenchacampogasolina">Por favor, preencha o valor da gasolina</string>
    <string name="campopersonalizadoetanolvazio">Para saber o consumo personalizado, você deve preencher o consumo com Etanol</string>
    <string name="campopersonalizadogasolinavazio">Para saber o consumo personalizado, você deve preencher o consumo com Gasolina</string>
    <string name="escolhaEtanol">Escolha o Etanol</string>
    <string name="abastecaEtanol">Abasteça Com Etanol. A relação de consumo Etanol/Gaslina é de:</string>
    <string name="escolhaGasolina">Escolha a Gasolina</string>
    <string name="abastecaGasolina">Abasteça Com Gasolina. A relação de consumo Etanol/Gaslina é de:</string>
</resources>
