<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtEtanol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_etanol"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtGasolina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_gasolina"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edtEtanol"
        app:layout_constraintStart_toStartOf="@+id/edtEtanol"
        app:layout_constraintTop_toBottomOf="@+id/edtEtanol" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/texto_opcional"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/edtGasolina"
        app:layout_constraintStart_toStartOf="@+id/edtGasolina"
        app:layout_constraintTop_toBottomOf="@+id/edtGasolina" />

    <EditText
        android:id="@+id/edtMediaEtanol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_media_etnol"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtMediaGasolina"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_media_gasolina"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edtMediaEtanol"
        app:layout_constraintStart_toStartOf="@+id/edtMediaEtanol"
        app:layout_constraintTop_toBottomOf="@+id/edtMediaEtanol" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="@+id/edtMediaGasolina"
        app:layout_constraintTop_toBottomOf="@+id/edtMediaGasolina" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_limpar"
        app:layout_constraintEnd_toEndOf="@+id/edtMediaGasolina"
        app:layout_constraintTop_toBottomOf="@+id/edtMediaGasolina" />

</android.support.constraint.ConstraintLayout>